--- a/configuration.yaml
+++ b/configuration.yaml
@@ -158,7 +158,7 @@ sensor:
     sensors:
       s0tool_gelijk_github:
         friendly_name: "s0Tool versie gelijk github versie"
-        value_template: "{{ is_state( states('sensor.s0tool_versie_github'), states('sensor.versie') ) }}"
+        value_template: "{{ is_state( states('sensor.s0tool_versie_github'), states('sensor.s0tool_versie') ) }}"
 
 
   #####################################################
