--- a/configuration.yaml
+++ b/configuration.yaml
@@ -153,6 +153,7 @@ sensor:
     resource: https://api.github.com/repos/huizebruin/s0tool/releases/latest
     name: s0tool_versie_github
     value_template: '​{{ value_json.tag_name }}​'
+    scan_interval: 3600
     
   - platform: template
     sensors:
