--- a/utility_meter.yaml
+++ b/utility_meter.yaml
@@ -1,45 +1,44 @@
-#utility_meter:
 ### watermeter  S0 meter
-  waterverbruik_kwartier:
-    source: sensor.s0tool_watermeter_totaal
-    cycle: quarter-hourly
-  waterverbruik_per_uur:
-    source: sensor.s0tool_watermeter_totaal
-    cycle: hourly
-  waterverbruik_per_dag:
-    source: sensor.s0tool_watermeter_totaal
-    cycle: daily    
-  waterverbruik_per_week:
-    source: sensor.s0tool_watermeter_totaal
-    cycle: weekly
-  waterverbruik_per_maand:
-    source: sensor.s0tool_watermeter_totaal
-    cycle: monthly
-  waterverbruik_per_kwartaal:
-    source: sensor.s0tool_watermeter_totaal
-    cycle: quarterly
-  waterverbruik_per_jaar:
-    source: sensor.s0tool_watermeter_totaal
-    cycle: yearly   
+waterverbruik_kwartier:
+  source: sensor.watermeter_totaal
+  cycle: quarter-hourly
+waterverbruik_per_uur:
+  source: sensor.watermeter_totaal
+  cycle: hourly
+waterverbruik_per_dag:
+  source: sensor.watermeter_totaal
+  cycle: daily    
+waterverbruik_per_week:
+  source: sensor.watermeter_totaal
+  cycle: weekly
+waterverbruik_per_maand:
+  source: sensor.watermeter_totaal
+  cycle: monthly
+waterverbruik_per_kwartaal:
+  source: sensor.watermeter_totaal
+  cycle: quarterly
+waterverbruik_per_jaar:
+  source: sensor.watermeter_totaal
+  cycle: yearly   
 ### zonnepanelen S0 meter
-  zonnepanelen_kwartier:
-    source: sensor.s0tool_actuele_vermogen
-    cycle: quarter-hourly
-  zonnepanelen_per_uur:
-    source: sensor.s0tool_actuele_vermogen
-    cycle: hourly
-  zonnepanelen_per_dag:
-    source: sensor.s0tool_actuele_vermogen
-    cycle: daily
-  zonnepanelen_per_week:
-    source: sensor.s0tool_actuele_vermogen
-    cycle: weekly
-  zonnepanelen_per_maand:
-    source: sensor.s0tool_actuele_vermogen
-    cycle: monthly 
-  zonnepanelen_per_kwartaal:
-    source: sensor.s0tool_actuele_vermogen
-    cycle: quarterly
-  zonnepanelen_per_jaar:
-    source: sensor.s0tool_actuele_vermogen
-    cycle: yearly   
+# zonnepanelen_kwartier:
+#   source: sensor.totaal_opgebracht
+#   cycle: quarter-hourly
+# zonnepanelen_per_uur:
+#   source: sensor.totaal_opgebracht
+#   cycle: hourly
+# zonnepanelen_per_dag:
+#   source: sensor.totaal_opgebracht
+#   cycle: daily
+# zonnepanelen_per_week:
+#   source: sensor.totaal_opgebracht
+#   cycle: weekly
+# zonnepanelen_per_maand:
+#   source: sensor.totaal_opgebracht
+#   cycle: monthly 
+# zonnepanelen_per_kwartaal:
+#   source: sensor.totaal_opgebracht
+#   cycle: quarterly
+# zonnepanelen_per_jaar:
+#   source: sensor.totaal_opgebracht
+#   cycle: yearly
