--- a/plant.yaml
+++ b/plant.yaml
@@ -9,90 +9,97 @@ openplantbook:
   secret: !secret plantbook_secret
 
 ## Volledige match
-dracaena_marginata:
+## dracaena_marginata
+plant_01:
   species: dracaena marginata
   name: Grote bij boekenkast
   image: openplantbook
   warn_low_brightness: false
   sensors:
-    moisture: sensor.esp32ble_dracaena_marginata_moisture
-    temperature: sensor.esp32ble_dracaena_marginata_temperature
-    conductivity: sensor.esp32ble_dracaena_marginata_conductivity
-    brightness: sensor.esp32ble_dracaena_marginata_illuminance
+    moisture: sensor.esp32ble_plant_01_moisture
+    temperature: sensor.esp32ble_plant_01_temperature
+    conductivity: sensor.esp32ble_plant_01_conductivity
+    brightness: sensor.esp32ble_plant_01_illuminance
 
 ## Volledige match
-aglaonema_sp_light_star:
+## aglaonema_sp_light_star
+plant_02:
   species: aglaonema sp
   name: Rode Light Star
   image: openplantbook
   warn_low_brightness: false
   sensors:
-    moisture: sensor.esp32ble_aglaonema_sp_light_star_moisture
-    temperature: sensor.esp32ble_aglaonema_sp_light_star_temperature
-    conductivity: sensor.esp32ble_aglaonema_sp_light_star_conductivity
-    brightness: sensor.esp32ble_aglaonema_sp_light_star_illuminance
+    moisture: sensor.esp32ble_plant_02_moisture
+    temperature: sensor.esp32ble_plant_02_temperature
+    conductivity: sensor.esp32ble_plant_02_conductivity
+    brightness: sensor.esp32ble_plant_02_illuminance
 
 ## Volledige match
-anthurium_andraeanum_white_champion:
+## anthurium_andraeanum_white_champion
+plant_03:
   species: anthurium andraeanum
   name: 'White champion'
   image: openplantbook
   warn_low_brightness: false
   sensors:
-    moisture: sensor.esp32ble_anthurium_andraeanum_white_champion_moisture
-    temperature: sensor.esp32ble_anthurium_andraeanum_white_champion_temperature
-    conductivity: sensor.esp32ble_anthurium_andraeanum_white_champion_conductivity
-    brightness: sensor.esp32ble_anthurium_andraeanum_white_champion_illuminance
+    moisture: sensor.esp32ble_plant_03_moisture
+    temperature: sensor.esp32ble_plant_03_temperature
+    conductivity: sensor.esp32ble_plant_03_conductivity
+    brightness: sensor.esp32ble_plant_03_illuminance
 
 ## Onderstaande reeks is nog zonder sensor
 
 
 ## Aangepaste naam gebruikt, maar wel redelijk goede match omdat het de "vader" is
-philodendron_hybrida:
+## philodendron_hybrida
+plant_04:
   species: philodendron 'con go'
   name: Philodendron 'White Measure'
   image: openplantbook
   warn_low_brightness: false
   sensors:
-    moisture: sensor.esp32ble_anthurium_andraeanum_white_champion_moisture
-    temperature: sensor.esp32ble_anthurium_andraeanum_white_champion_temperature
-    conductivity: sensor.esp32ble_anthurium_andraeanum_white_champion_conductivity
-    brightness: sensor.esp32ble_anthurium_andraeanum_white_champion_illuminance
+    moisture: sensor.esp32ble_plant_04_moisture
+    temperature: sensor.esp32ble_plant_04_temperature
+    conductivity: sensor.esp32ble_plant_04_conductivity
+    brightness: sensor.esp32ble_plant_04_illuminance
 
 ## Volledige match
-epiphyllum_anguliger:
+## epiphyllum_anguliger
+plant_05:
   species: epiphyllum anguliger
   name: Naast TV
   image: openplantbook
   warn_low_brightness: false
   sensors:
-    moisture: sensor.esp32ble_anthurium_andraeanum_white_champion_moisture
-    temperature: sensor.esp32ble_anthurium_andraeanum_white_champion_temperature
-    conductivity: sensor.esp32ble_anthurium_andraeanum_white_champion_conductivity
-    brightness: sensor.esp32ble_anthurium_andraeanum_white_champion_illuminance
+    moisture: sensor.esp32ble_plant_05_moisture
+    temperature: sensor.esp32ble_plant_05_temperature
+    conductivity: sensor.esp32ble_plant_05_conductivity
+    brightness: sensor.esp32ble_plant_05_illuminance
 
 ## Geen passende match
 ## Dichtsbijzijnde is: guzmania lingulata 'scarlet star'
-bromelia_botanica:
+## bromelia_botanica
+plant_06:
   species: guzmania lingulata 'scarlet star'
   name: Bromelia Botanica
   image: openplantbook
   warn_low_brightness: false
   sensors:
-    moisture: sensor.esp32ble_anthurium_andraeanum_white_champion_moisture
-    temperature: sensor.esp32ble_anthurium_andraeanum_white_champion_temperature
-    conductivity: sensor.esp32ble_anthurium_andraeanum_white_champion_conductivity
-    brightness: sensor.esp32ble_anthurium_andraeanum_white_champion_illuminance
+    moisture: sensor.esp32ble_plant_06_moisture
+    temperature: sensor.esp32ble_plant_06_temperature
+    conductivity: sensor.esp32ble_plant_06_conductivity
+    brightness: sensor.esp32ble_plant_06_illuminance
 
 ## Pannenkoekenplant - volledige match
-pilea_peperomioides:
+## pilea_peperomioides:
+plant_07:
   species: pilea peperomioides
   name: Pannenkoekenplant
   image: openplantbook
   warn_low_brightness: false
   sensors:
-    moisture: sensor.esp32ble_anthurium_andraeanum_white_champion_moisture
-    temperature: sensor.esp32ble_anthurium_andraeanum_white_champion_temperature
-    conductivity: sensor.esp32ble_anthurium_andraeanum_white_champion_conductivity
-    brightness: sensor.esp32ble_anthurium_andraeanum_white_champion_illuminance
+    moisture: sensor.esp32ble_plant_07_moisture
+    temperature: sensor.esp32ble_plant_07_temperature
+    conductivity: sensor.esp32ble_plant_07_conductivity
+    brightness: sensor.esp32ble_plant_07_illuminance
   
